# CISP

./: .gitignore  README.md  pyproject.toml  report.html  report.json  test.txt  test_base_module.py  test_engine.py  test_loader.py  test_registry.py
core/: base_module.py  engine.py  logger.py  models.py  plugin_loader.py  registry.py
modules/testing/: test_plugin.py
src/cisp/: main.py
src/cisp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cisp/cli/: __init__.py  app.py  banner.py  menu.py  profile_mapper.py  wizard.py
src/cisp/config/: profile_manager.py  scan_profiles.yaml
src/cisp/core/: __init__.py  base_module.py  context.py  engine.py  evidence.py  execution_manager.py  finding.py  models.py  plugin_loader.py  registry.py  report.py  risk.py  severity.py  target.py
src/cisp/models/: __init__.py  result.py
src/cisp/models/recon/dns/: README.md  __init__.py  module.py
src/cisp/modules/: test_plugin.py
src/cisp/modules/whois_old/: plugin.py
src/cisp/pipelines/: full.py  infrastructure.py  recon.py  runner.py  web.py
src/cisp/reporting/: aggregator.py  html_report.py  json_report.py
src/cisp/reporting/templates/: report.html
src/cisp/utils/: http.py
tests/: test_banner.py  test_base_module.py  test_dns.py  test_html_report.py  test_json_report.py  test_logger.py  test_port_scanner.py  test_profile_manager.py  test_recon_pipeline.py  test_report.py  test_result.py  test_security_headers.py  test_ssl_scanner.py  test_target.py  test_tech_detection.py  test_vulnerability_analyzer.py  test_whois.py
tests/core/: test_engine.py  test_loader.py  test_registry.py
(+13 files in other folders)
